# x86-instructions

./: CHANGELOG.md  README.md  cabal.project  x86-instructions.cabal
src-encode/X86/: Label.hsig
src-encode/X86/Encode/: Nasm.hs
src-labeled/X86/: Label.hsig  Labeled.hs
src/X86/: Operator.hs  Unlabeled.hs
src/X86/Label/: ShortText.hs
test/: Main.hs
