cabal-version: 3.4
name: x86-instructions
version: 0.1.0.0
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
extra-source-files: CHANGELOG.md

common std
  ghc-options: -Wall -O2
  default-language: Haskell2010
  build-depends:
    , base >=4.14.3.0
    , topaz
    , array-builder >=0.1.2
    , text-short >=0.1.3
    , primitive >=0.7.4
    , byteslice >=0.2.9

library
  import: std
  exposed-modules:
    X86.Unlabeled
    X86.Operator
    X86.Label.ShortText
    -- X86.Register.Set
  hs-source-dirs: src

library labeled
  import: std
  exposed-modules:
    X86.Labeled
  signatures:
    X86.Label
  build-depends: x86-instructions
  hs-source-dirs: src-labeled

library encode
  import: std
  exposed-modules:
    X86.Encode.Nasm
  signatures:
    X86.Label
  build-depends:
    , x86-instructions
    , x86-instructions:labeled
  hs-source-dirs: src-encode

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall
  mixins:
    x86-instructions:labeled (X86.Labeled)
      requires (X86.Label as X86.Label.ShortText),
    x86-instructions:encode (X86.Encode.Nasm)
      requires (X86.Label as X86.Label.ShortText),
  build-depends:
    , x86-instructions
    , x86-instructions:encode
    , x86-instructions:labeled
    , base >=4.12.0.0 && <5
    , array-builder >=0.1.2
    , byteslice
    , text-short
    , tasty >=1.2.3 && <1.5
    , tasty-hunit >=0.10.0.2 && <0.11
    , text >=1.2 && <1.3
    , topaz
